--- a/limpio.ui
+++ b/limpio.ui
@@ -2,6 +2,7 @@
 <!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.12"/>
+  <object class="GtkTextBuffer" id="textbufferHeaderPodcasts"/>
   <object class="GtkWindow" id="mainWindow">
     <property name="width_request">769</property>
     <property name="height_request">430</property>
@@ -34,7 +35,7 @@
                     <property name="tooltip_text" translatable="yes">Previous</property>
                     <property name="label" translatable="yes">Previous</property>
                     <property name="use_underline">True</property>
-                    <property name="stock_id">gtk-media-previous</property>
+                    <property name="icon_name">gtk-media-previous</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -48,7 +49,7 @@
                     <property name="tooltip_text" translatable="yes">Play/Pause</property>
                     <property name="label" translatable="yes">Play/Pause</property>
                     <property name="use_underline">True</property>
-                    <property name="stock_id">gtk-media-play</property>
+                    <property name="icon_name">media-playback-start</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -62,7 +63,7 @@
                     <property name="tooltip_text" translatable="yes">Forward</property>
                     <property name="label" translatable="yes">Forward</property>
                     <property name="use_underline">True</property>
-                    <property name="stock_id">gtk-media-forward</property>
+                    <property name="icon_name">gtk-media-forward</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -131,7 +132,7 @@
                 <property name="tooltip_text" translatable="yes">Atras</property>
                 <property name="label" translatable="yes">toolbutton1</property>
                 <property name="use_underline">True</property>
-                <property name="stock_id">gtk-go-back</property>
+                <property name="icon_name">gtk-go-back</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -145,7 +146,7 @@
                 <property name="tooltip_text" translatable="yes">Adelante</property>
                 <property name="label" translatable="yes">toolbutton2</property>
                 <property name="use_underline">True</property>
-                <property name="stock_id">gtk-go-forward</property>
+                <property name="icon_name">gtk-go-forward</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -165,7 +166,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkToggleToolButton" id="toolbutton4">
+              <object class="GtkToggleToolButton" id="toggletoolbuttonProgramas">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="tooltip_text" translatable="yes">Programas</property>
@@ -197,7 +198,7 @@
                 <property name="tooltip_text" translatable="yes">Adelante</property>
                 <property name="label" translatable="yes">Busqueda</property>
                 <property name="use_underline">True</property>
-                <property name="stock_id">gtk-find</property>
+                <property name="icon_name">edit-find</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -211,7 +212,7 @@
                 <property name="tooltip_text" translatable="yes">Adelante</property>
                 <property name="label" translatable="yes">Preferencias</property>
                 <property name="use_underline">True</property>
-                <property name="stock_id">gtk-preferences</property>
+                <property name="icon_name">gtk-preferences</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -251,120 +252,6 @@
                             <property name="can_focus">False</property>
                             <property name="margin_left">5</property>
                             <property name="activate_on_single_click">False</property>
-                            <child>
-                              <object class="GtkListBoxRow" id="listboxrow3">
-                                <property name="width_request">100</property>
-                                <property name="height_request">80</property>
-                                <property name="visible">True</property>
-                                <property name="can_focus">True</property>
-                                <property name="activatable">False</property>
-                                <property name="selectable">False</property>
-                                <child>
-                                  <object class="GtkExpander" id="Grupos2">
-                                    <property name="visible">True</property>
-                                    <property name="can_focus">True</property>
-                                    <property name="tooltip_text" translatable="yes">Radio3 Group</property>
-                                    <child>
-                                      <object class="GtkListBox" id="listbox3">
-                                        <property name="visible">True</property>
-                                        <property name="can_focus">False</property>
-                                        <property name="margin_left">2</property>
-                                        <child>
-                                          <object class="GtkListBoxRow" id="listboxrow4">
-                                            <property name="width_request">100</property>
-                                            <property name="height_request">80</property>
-                                            <property name="visible">True</property>
-                                            <property name="can_focus">True</property>
-                                            <child>
-                                              <object class="GtkBox" id="boxGrupos3">
-                                                <property name="visible">True</property>
-                                                <property name="can_focus">False</property>
-                                                <property name="spacing">8</property>
-                                                <child>
-                                                  <object class="GtkImage" id="imageBoxGrupos3">
-                                                    <property name="visible">True</property>
-                                                    <property name="can_focus">False</property>
-                                                    <property name="icon_name">face-smirk</property>
-                                                    <property name="icon_size">5</property>
-                                                  </object>
-                                                  <packing>
-                                                    <property name="expand">False</property>
-                                                    <property name="fill">False</property>
-                                                    <property name="position">0</property>
-                                                  </packing>
-                                                </child>
-                                                <child>
-                                                  <object class="GtkLabel" id="label4">
-                                                    <property name="visible">True</property>
-                                                    <property name="can_focus">False</property>
-                                                    <property name="label" translatable="yes">Discopolis
-Actualizado: 23-03-2015</property>
-                                                  </object>
-                                                  <packing>
-                                                    <property name="expand">False</property>
-                                                    <property name="fill">True</property>
-                                                    <property name="position">1</property>
-                                                  </packing>
-                                                </child>
-                                              </object>
-                                            </child>
-                                          </object>
-                                        </child>
-                                        <child>
-                                          <object class="GtkListBoxRow" id="listboxrow5">
-                                            <property name="width_request">100</property>
-                                            <property name="height_request">80</property>
-                                            <property name="visible">True</property>
-                                            <property name="can_focus">True</property>
-                                            <child>
-                                              <object class="GtkBox" id="boxGrupos1">
-                                                <property name="visible">True</property>
-                                                <property name="can_focus">False</property>
-                                                <property name="spacing">8</property>
-                                                <child>
-                                                  <object class="GtkImage" id="imageBoxGrupos1">
-                                                    <property name="visible">True</property>
-                                                    <property name="can_focus">False</property>
-                                                    <property name="icon_name">face-monkey</property>
-                                                    <property name="icon_size">5</property>
-                                                  </object>
-                                                  <packing>
-                                                    <property name="expand">False</property>
-                                                    <property name="fill">False</property>
-                                                    <property name="position">0</property>
-                                                  </packing>
-                                                </child>
-                                                <child>
-                                                  <object class="GtkLabel" id="label3">
-                                                    <property name="visible">True</property>
-                                                    <property name="can_focus">False</property>
-                                                    <property name="label" translatable="yes">Discopolis
-Actualizado: 23-03-2015</property>
-                                                  </object>
-                                                  <packing>
-                                                    <property name="expand">False</property>
-                                                    <property name="fill">True</property>
-                                                    <property name="position">1</property>
-                                                  </packing>
-                                                </child>
-                                              </object>
-                                            </child>
-                                          </object>
-                                        </child>
-                                      </object>
-                                    </child>
-                                    <child type="label">
-                                      <object class="GtkLabel" id="label7">
-                                        <property name="visible">True</property>
-                                        <property name="can_focus">True</property>
-                                        <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">Radio3</property>
-                                      </object>
-                                    </child>
-                                  </object>
-                                </child>
-                              </object>
-                            </child>
                           </object>
                         </child>
                       </object>
@@ -483,13 +370,17 @@ Actualizado: 23-03-2015</property>
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <child>
-                              <object class="GtkLabel" id="labelHeaderPodcasts">
+                              <object class="GtkTextView" id="textviewHeaderPodcasts">
                                 <property name="visible">True</property>
-                                <property name="can_focus">False</property>
-                                <property name="label" translatable="yes">label</property>
+                                <property name="can_focus">True</property>
+                                <property name="editable">False</property>
+                                <property name="wrap_mode">word</property>
+                                <property name="cursor_visible">False</property>
+                                <property name="buffer">textbufferHeaderPodcasts</property>
+                                <property name="accepts_tab">False</property>
                               </object>
                               <packing>
-                                <property name="expand">False</property>
+                                <property name="expand">True</property>
                                 <property name="fill">True</property>
                                 <property name="position">0</property>
                               </packing>
@@ -502,7 +393,7 @@ Actualizado: 23-03-2015</property>
                                 <property name="icon_name">task-due</property>
                               </object>
                               <packing>
-                                <property name="expand">True</property>
+                                <property name="expand">False</property>
                                 <property name="fill">True</property>
                                 <property name="position">1</property>
                               </packing>
@@ -581,8 +472,5 @@ Actualizado: 23-03-2015</property>
         </child>
       </object>
     </child>
-  </object>
-  <object class="GtkTextBuffer" id="textbuffer1">
-    <property name="text" translatable="yes">Miscelánea: Bruut!, Anthony Joseph &amp;amp;amp; The Spasm Band, Fernando Saunders, MFC Chicken, Dayna Kurtz.Sinto: "Main Title Theme From Lake Bears" - MFC Chicken."Fly", "Wiggle", "Hop" - Bruut!; "Tanty Lynn", "Speak The Name" - Anthony Joseph &amp;amp;amp; The Spasm Band; "Baton Rouge" - Fernando Saunders (feat. Lou Reed); "(Get Outta The) Dj Booth", "Lake Bears Theme Song" - MFC Chicken; "From The Bottom Up", "Nola" - Dayna Kurtz.</property>
   </object>
 </interface>
