--- a/ui/limpio.ui
+++ b/ui/limpio.ui
@@ -9,6 +9,7 @@
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">easyPodcasts</property>
     <property name="window_position">center</property>
+    <property name="icon">icon.png</property>
     <child>
       <object class="GtkBox" id="boxMain">
         <property name="visible">True</property>
