--- a/ui/limpio.ui
+++ b/ui/limpio.ui
@@ -444,11 +444,10 @@ audio-volume-medium-symbolic</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="pixel_size">86</property>
-                                <property name="icon_name">task-due</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
-                                <property name="fill">True</property>
+                                <property name="fill">False</property>
                                 <property name="position">1</property>
                               </packing>
                             </child>
