--- a/ui/limpio.ui
+++ b/ui/limpio.ui
@@ -226,7 +226,7 @@ audio-volume-medium-symbolic</property>
                 <property name="tooltip_text" translatable="yes">Programas</property>
                 <property name="label" translatable="yes">Programas</property>
                 <property name="use_underline">True</property>
-                <signal name="toggled" handler="boxPodCasts.Visible=false" swapped="no"/>
+                <property name="active">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
