--- a/ui/dialogAddRSS.ui
+++ b/ui/dialogAddRSS.ui
@@ -3,7 +3,6 @@
 <interface>
   <requires lib="gtk+" version="3.12"/>
   <object class="GtkWindow" id="windowRSS">
-    <property name="width_request">507</property>
     <property name="height_request">39</property>
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Add new RSS</property>
@@ -33,6 +32,10 @@
               <object class="GtkGrid" id="grid1">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="margin_left">6</property>
+                <property name="margin_right">6</property>
+                <property name="margin_top">6</property>
+                <property name="margin_bottom">6</property>
                 <property name="row_spacing">9</property>
                 <property name="column_spacing">9</property>
                 <child>
@@ -52,6 +55,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="has_focus">True</property>
+                    <property name="max_length">90</property>
                     <property name="primary_icon_activatable">False</property>
                   </object>
                   <packing>
@@ -75,6 +79,8 @@
                   <object class="GtkEntry" id="url">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="max_length">90</property>
+                    <property name="width_chars">45</property>
                     <property name="max_width_chars">45</property>
                   </object>
                   <packing>
@@ -113,7 +119,7 @@
           </object>
         </child>
         <child type="label">
-          <object class="GtkLabel" id="label1">
+          <object class="GtkLabel" id="labelFrame">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="label" translatable="yes">Add new RSS</property>
